Fixar alignment css + lite script

--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -368,14 +368,14 @@ button:active {
 }
 
 #desc {
+    position: relative;
     margin: 20px 0px;
     justify-self: center;
     border-radius: 10px;
-    max-height: 620px;
+    max-height: 590px;
     overflow-y: auto;
     overflow-x: hidden;
     background-color: rgba(255, 255, 255, 0.5);
-    position: relative;
     display: flex;
     flex-direction: column;
     width: 315px;
@@ -591,22 +591,21 @@ h4 {
 }
 
 #drop-down {
-    justify-self: center;
-    grid-column: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #0F3665;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
     cursor: pointer;
     user-select: none;
-    width: 315px;
     z-index: 2;
-    top: 262px;
     box-sizing: border-box;
-    left: 16px;
-    position: absolute;
+    padding: 0 10px;
 }
 
 
